--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -279,4 +279,10 @@
     <!-- Contact Form JavaScript -->
     <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
     <script src="{% static 'js/contact_me.js' %}"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+});
 {% endblock js %}
