--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -62,7 +62,7 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
         <!-- Plugin JavaScript -->
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+        // <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
         <script src="{% static 'js/classie.js' %}"></script>
         {#<script src="{% static 'js/cbpAnimatedHeader.js' %}"></script>#}
 
