added construction to blog page

--- a/blog/templates/front.html
+++ b/blog/templates/front.html
@@ -16,6 +16,18 @@
                 <h6>Mine is Azure</h6>
             </div>
         </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <style>
+                    h2 {
+                        text-align: center;
+                        padding-top: 50px;
+                    }
+                </style>
+                <h2>This Area is Under Construction</h2>
+                <h2>Please Come Back Later</h2>
+            </div>
+        </div>
     </div>
 
 {% endblock content %}
