--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -10,6 +10,15 @@
         <meta name="description" content="Landing page for Ryan Merrill">
         <meta name="author" content="Ryan Merrill">
 
+        <!-- Icon Links for favicon and homescreen icons on Android and iOS -->
+        <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+        <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}">
+        <link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/apple-touch-icon.png' %}">
+        <link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/apple-touch-icon.png' %}">
+        <link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/apple-touch-icon.png' %}">
+        <link rel="icon" sizes="192x192" href="{% static 'img/apple-touch-icon.png' %}">
+        <link rel="icon" sizes="128x128" href="{% static 'img/apple-touch-icon.png' %}">
+
         <title>Ryan Merrill</title>
 
         <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
