--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -11,7 +11,7 @@
         <div class="row blog-section">
             <div class="col-xs-12">
                 <p class='blog-link'>
-                    <a href="{% url 'front' %}" target='blank'>Go To the Blog
+                    <a href="{% url 'blog:front' %}" target='blank'>Go To the Blog
                         <i class="fa fa-arrow-right"></i>
                     </a>
                 </p>
