--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -1,5 +1,5 @@
-{% url 'home' as home %}
-{% url 'front' as blog %}
+{% url 'main:home' as home %}
+{% url 'blog:front' as blog %}
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -13,7 +13,7 @@
             {% if request.path == home %}
                 <a id='nav-page-top' class="navbar-brand" href="#page-top">&lt;RM&gt; Ryan &lt;/RM&gt;</a>
             {% elif request.path == blog %}
-                <a id='nav-page-top' class="navbar-brand" href="{% url 'front' %}">&lt;AT&gt; Azure &lt;/AT&gt;</a>
+                <a id='nav-page-top' class="navbar-brand" href="{% url 'blog:front' %}">&lt;AT&gt; Azure &lt;/AT&gt;</a>
             {% else %}
                 <a id='nav-page-top' class="navbar-brand" href="#page-top">&lt;RM&gt; Ryan &lt;/RM&gt;</a>
             {% endif %}
@@ -30,7 +30,7 @@
                     {% if request.path == home %}
                         <a id='nav-portfolio' href="#portfolio">
                     {% else %}
-                        <a id='nav-portfolio' href="{% url 'home' %}#portfolio">
+                        <a id='nav-portfolio' href="{% url 'main:home' %}#portfolio">
                     {% endif %}
                     Portfolio</a>
                 </li>
@@ -38,7 +38,7 @@
                     {% if request.path == home %}
                         <a id='nav-about' href="#about">
                     {% else %}
-                        <a id='nav-about' href="{% url 'home' %}#about">
+                        <a id='nav-about' href="{% url 'main:home' %}#about">
                     {% endif %}
                     About</a>
                 </li>
@@ -46,7 +46,7 @@
                     {% if request.path == home %}
                         <a id='nav-blog' href="#blog">
                     {% else %}
-                        <a id='nav-blog' href="{% url 'front' %}">
+                        <a id='nav-blog' href="{% url 'blog:front' %}">
                     {% endif %}
 
                     Blog</a>
@@ -55,7 +55,7 @@
                     {% if request.path == home %}
                         <a id='nav-contact' href="#contact">
                     {% else %}
-                        <a id='nav-contact' href="{% url 'home' %}#contact">
+                        <a id='nav-contact' href="{% url 'main:home' %}#contact">
                     {% endif %}
 
                     Contact</a>
