--- a/main/static/css/landing.css
+++ b/main/static/css/landing.css
@@ -11,6 +11,10 @@ body {
     margin-bottom: 120px;
 }
 
+#post-previews {
+    text-align: left;
+}
+
 /*START LOGGED IN BUTTON*/
 
 #logged-in-badge {
