--- a/main/templates/blog.html
+++ b/main/templates/blog.html
@@ -6,6 +6,9 @@
             <div class="col-lg-12 text-center">
                 <h2>Blog</h2>
                 <hr class="hr-divider">
+
+                <div id='post-previews'></div>
+                        
             </div>
         </div>
         <div class="row blog-section">
